--- a/contact.html
+++ b/contact.html
@@ -54,16 +54,16 @@
     </header>
     <section class="contact-main pb-5">
         <div class="heading text-center py-5">
-            <h2><b>Frequently asked questions</b></h2>
+            <h1><b>Frequently asked questions</b></h1>
             <p>Everything you need to know about the product and billing</p>
         </div>
-        <div class="container d-flex flex-column flex-md-row pb-5 bg-danger">
+        <div class="container d-flex flex-column flex-md-row pb-5">
             <div class="col-sm-12 col-md-6 mb-4 mb-md-0">
                 <table class="table ">                    
                     <tbody>
                         <tr>
                             <th scope="row">+</th>
-                            <td class="bg-danger">Where can I find the offer of villa and services prices?</td>
+                            <td>Where can I find the offer of villa and services prices?</td>
                           </tr>
                           <tr>
                             <th scope="row">+</th>
@@ -123,7 +123,7 @@
     </section>
     <footer class="contact-topfooter">
         <div class="box2 container ps-0 ps-md-5 pb-5">
-            <h2 class="py-5">We'd love to hear from you</h2>
+            <h1 class="py-5">We'd love to hear from you</h1>
             <div>
                 <form class="form_container row g-3">
                   <div class="col-md-6">                      
