--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <section class="contact-main pb-5">
         <div class="heading text-center py-5">
             <h1><b>Frequently asked questions</b></h1>
-            <p>Everything you need to know about the product and billing</p>
+            <p class="smallcase-p">Everything you need to know about the product and billing</p>
         </div>
         <div class="container d-flex flex-column flex-md-row pb-5">
             <div class="col-sm-12 col-md-6 mb-4 mb-md-0">
