--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
             <div class="container d-flex flex-column flex-md-row gap-3 ps-md-5">
                 <div class="col-sm-12 col-md-6 mb-4 mb-md-0">
                     <h4>Luxury Rental</h4>
-                    <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do <br>
+                    <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do
                         eiusmod tempor inicidunt ut labore et dolore magna aliqua. Ut
                     <div class="d-flex flex-row gap-3">
                         <p>Terms and Conditions</p>
