--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <!-- Main CSS -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/about.css" rel="stylesheet">
   
 </head>
 
