--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div class="contact-basefooter">
-            <div class="container d-flex flex-column flex-md-row gap-3 ps-md-5">
+            <div class="container d-flex flex-column flex-md-row gap-3">
                 <div class="col-sm-12 col-md-6 mb-4 mb-md-0">
                     <h4>Luxury Rental</h4>
                     <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do
@@ -154,7 +154,7 @@
                         <p>Imprint</p>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6">
+                <div class="contact-connectus col-sm-12 col-md-6">
                     <h4>Connect with us</h4>
                     <p>00 000 000 00</p>
                     <p>info@luxuryrental.com</p>                    
