updated css file

--- a/about.html
+++ b/about.html
@@ -16,16 +16,15 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <!-- Main CSS -->
-  <link href="assets/css/about.css" rel="stylesheet">
+  <link href="./CSS/about.css" rel="stylesheet">
   
 </head>
-
 <body>
 
   <!-- Header -->
   <nav class="navbar navbar-expand-lg bg-color text-white shadow-sm" style="background-color: #5B656F;">
     <div class="container-sm px-5">
-      <a class="nav-link letter-spacing">
+      <a class="nav-link letter-spacing" href="index.html">
         L&nbsp;U&nbsp;X&nbsp;U&nbsp;R&nbsp;Y&nbsp;&nbsp;R&nbsp;E&nbsp;N&nbsp;T&nbsp;A&nbsp;L&nbsp;S
     </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -36,7 +35,7 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-3"><a class="nav-link" href="#">VILLA</a></li>
           <li class="nav-item mx-3"><a class="nav-link" href="#">ABOUT US</a></li>
-          <li class="nav-item mx-3"><a class="nav-link" href="#">CONTACT</a></li>
+          <li class="nav-item mx-3"><a class="nav-link" href="contact.html">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -46,7 +45,7 @@
   <div class="container mx-auto my-5 py-5 px-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="assets/img/blue-sky.png" alt="" class="img-fluid">
+        <img src="accessories/blue-sky.png" alt="" class="img-fluid">
       </div>
       <div class="col-md-6 px-4 py-5">
         <h1 class="mb-3">Your peace of mind, our priority</h1>
@@ -81,7 +80,7 @@
         </div>
       </div>
       <div class="col-md-6 border-0">
-        <img src="assets/img/aboutUs.png" alt="" class="img-fluid">
+        <img src="accessories/aboutUs.png" alt="" class="img-fluid">
       </div>
     </div>
   </div>
