--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <!--navpage should be included here-->
     <header class="top-page">
         <div class="heading text-center py-5">
             <h1>Contact us</h1>
@@ -142,6 +143,7 @@
                 <button class="btn btn-secondary">SEND</button>
             </div>
         </div>
+        <!--common footerpage area in case it needs to be change with that of the team-->
         <div class="contact-basefooter">
             <div class="container d-flex flex-column flex-md-row gap-3">
                 <div class="col-sm-12 col-md-6 mb-4 mb-md-0">
