--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,30 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <!--navpage should be included here-->
+    <!--navpage should be included her-->
     <header class="top-page">
+            <nav class="navbar navbar-expand-lg w-100">
+                <div class="container"> <!-- rework -->
+                  <a class="navbar-brand text-white fs-6" href="#">LUXURY RENTALS</a>
+                  <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="fa-solid fa-bars fs-4 navbar-toggle"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
+                      <li class="nav-item fs-6">
+                        <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
+                      </li>
+                      <li class="nav-item fs-6">
+                        <a class="nav-link" href="#about_us">ABOUT US</a>
+                      </li><li class="nav-item fs-6">
+                        <a class="nav-link" href="#contact">CONTACT US</a>
+                      </li>
+                  </div>
+                </div>
+            </nav>
+
         <div class="heading text-center py-5">
-            <h1>Contact us</h1>
+            <h1 class="mt-3">Contact us</h1>
             <p>We're always here to answer your questions.<br> Reach out and we'll get back to you as soon as possible.</p>
         </div>
         <section>
