--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
         </div>
         <section>
             <div class="container g-3 d-flex flex-column flex-md-row py-5">
-                <div class="leftside col-md-6 text-center">
+                <div class="contact-leftside col-md-6 text-center">
                     <img src="" alt="">
                 </div>
-                <div class="rightside col-md-6 ps-md-5 py-3">
+                <div class="contact-rightside col-md-6 ps-md-5 py-3">
                     <div class="pt-5">
                         <h1>Connect with us</h1>
                         <div class="d-flex gap-3">
