--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <div class="collapse navbar-collapse me-auto" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-3"><a class="nav-link" href="#">VILLA</a></li>
-          <li class="nav-item mx-3"><a class="nav-link" href="#">ABOUT US</a></li>
+          <li class="nav-item mx-3"><a class="nav-link" href="about.html">ABOUT US</a></li>
           <li class="nav-item mx-3"><a class="nav-link" href="contact.html">CONTACT</a></li>
         </ul>
       </div>
