--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
                         <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
                       </li>
                       <li class="nav-item fs-6">
-                        <a class="nav-link" href="#about_us">ABOUT US</a>
+                        <a class="nav-link" href="about.html">ABOUT US</a>
                       </li><li class="nav-item fs-6">
-                        <a class="nav-link" href="#contact">CONTACT US</a>
+                        <a class="nav-link" href="contact.html">CONTACT US</a>
                       </li>
                   </div>
                 </div>
