--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
                       </li>
                       <li class="nav-item fs-6">
-                        <a class="nav-link" href="#">ABOUT US</a>
+                        <a class="nav-link" href="about.html">ABOUT US</a>
                       </li><li class="nav-item fs-6">
                         <a class="nav-link" href="contact.html">CONTACT US</a>
                       </li>
