--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 
   <!-- Main CSS -->
   <link href="./CSS/about.css" rel="stylesheet">
+  <link href="./CSS/style.css" rel="stylesheet">
   
 </head>
 <body>
@@ -86,8 +87,40 @@
   </div>
 
   <!-- Footer -->
-  <footer class="mt-5 py-5">
-  </footer>
+  <footer class="contact-topfooter">
+  </div>
+  <!--common footerpage area in case it needs to be change with that of the team-->
+  <div class="contact-basefooter">
+      <div class="container d-flex flex-column flex-md-row gap-3">
+          <div class="col-sm-12 col-md-6 mb-4 mb-md-0">
+              <h4>Luxury Rental</h4>
+              <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do
+                  eiusmod tempor inicidunt ut labore et dolore magna aliqua. Ut
+              <div class="d-flex flex-row gap-3">
+                  <p>Terms and Conditions</p>
+                  <p>Privacy Notice and Cookies</p>
+                  <p>Imprint</p>
+              </div>
+          </div>
+          <div class="contact-connectus col-sm-12 col-md-6">
+              <h4>Connect with us</h4>
+              <p>00 000 000 00</p>
+              <p>info@luxuryrental.com</p>                    
+              <div class="icons d-flex align-items-center gap-3">
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-youtube"></i>
+                  <i class="bi bi-dribbble"></i>
+                  <i class="bi bi-figma"></i>
+                  <i class="bi bi-whatsapp"></i>
+              </div>
+              <div class="footeraddress d-flex gap-3">
+                  <p>Luxury rentals</p>
+                  <p> All rights reserved 2022-2023</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</footer>
 
   <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
