--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
                       <li class="nav-item fs-6">
-                        <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">VILLAS</a>
                       </li>
                       <li class="nav-item fs-6">
                         <a class="nav-link" href="about.html">ABOUT US</a>
