--- a/itempage.html
+++ b/itempage.html
@@ -34,7 +34,7 @@
             <div class="row">
               <div class="col-sm-5 col-md-6 me-auto d-flex justify-content-center align-items-center" style="height: 100%;" >
 
-                <img src="./accessories/Rectangle 123.png" alt="" width="620px" height="699vh">
+                <img src="./accessories/Rectangle-it.png" alt="" width="620px" height="699vh">
                 
             </div>
 
