--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
               <div class="swiper-slide  ">
                 <div class="card    d-flex justify-content-center align-items-center" style="position: relative;">
-                    <img src="./accessories/Rectangle 123 (1).png" class="" alt="..." width="100%">
+                    <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                     <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
                     <p 
                     style="position: absolute; top: 4%; right: 6%;"
