--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div> -->
           <div class="swiper  container ">
    
-            <div class="swiper-wrapper col-lg-4 col-sm-12  ">
+            <div class="swiper-wrapper col-lg-4   ">
     
               <div class="swiper-slide  ">
                 <div class="card    d-flex justify-content-center align-items-center" style="position: relative;">
