--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@
         <div class="container mt-4 py-4">
             <div class="row" id="mount-coast-2">
               <div class="col-lg-6 dp-1">
-               <img src="/accessories/ISTRIA.png" class="ms-auto" alt="" width="100%">
+               <img src="./accessories/ISTRIA.png" class="ms-auto" alt="" width="100%">
               </div>
               <div class="col-lg-6 dp-2 ">
-                <img src="/accessories/DALMATIA.png" alt="" width="100%">
+                <img src="./accessories/DALMATIA.png" alt="" width="100%">
               </div>
             </div>
         </div>
@@ -474,7 +474,7 @@
             </div>
             </div>
           <div class="col-lg-6 compact order-sm-1 mt-4">
-            <img src="/accessories/Group 45.png" alt="" width="80%">
+            <img src="./accessories/Group 45.png" alt="" width="80%">
           </div>
         </div>
       </div>
