--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    
           <div class="swiper-wrapper container ">
   
-            <div class="swiper-slide ">
+            <div class="swiper-slide col-sm-12 ">
               <div class="card  d-flex justify-content-center align-items-center" style="">
                 <div class="  fefe">
                   <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -121,7 +121,7 @@
                 </div>
               </div>
               
-              <div class="swiper-slide ">
+              <div class="swiper-slide col-sm-12 ">
                 <div class="card  d-flex justify-content-center align-items-center" style="">
                   <div class="  fefe">
                     <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -155,7 +155,7 @@
                   </div>
                 </div>
 
-                <div class="swiper-slide ">
+                <div class="swiper-slide col-sm-12 ">
                   <div class="card  d-flex justify-content-center align-items-center" style="">
                     <div class="  fefe">
                       <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -188,7 +188,7 @@
                     </div>
                     </div>
                   </div>
-                  <div class="swiper-slide ">
+                  <div class="swiper-slide col-sm-12 ">
                     <div class="card  d-flex justify-content-center align-items-center" style="">
                       <div class="  fefe">
                         <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -221,7 +221,7 @@
                       </div>
                       </div>
                     </div>
-                    <div class="swiper-slide ">
+                    <div class="swiper-slide col-sm-12 ">
                       <div class="card  d-flex justify-content-center align-items-center" style="">
                         <div class="  fefe">
                           <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -254,7 +254,7 @@
                         </div>
                         </div>
                       </div>
-                      <div class="swiper-slide ">
+                      <div class="swiper-slide col-sm-12 ">
                         <div class="card  d-flex justify-content-center align-items-center" style="">
                           <div class="  fefe">
                             <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -287,7 +287,7 @@
                           </div>
                           </div>
                         </div>
-                        <div class="swiper-slide ">
+                        <div class="swiper-slide col-sm-12 ">
                           <div class="card  d-flex justify-content-center align-items-center" style="">
                             <div class="  fefe">
                               <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -480,7 +480,7 @@
       </div>
     </section>
 
-    <section id="connect" class="bg-danger mt-4 py-3">
+    <section id="connect" class=" mt-4 py-3">
       <div class="container connect-container">
         <div class="connected "style="width: fit-content;">
           <h2>Let’s connect</h2>
