--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section>
         <div class="swiper container">
    
-          <div class="swiper-wrapper container ">
+          <div class="swiper-wrapper row container ">
   
             <div class="swiper-slide col-sm-12 ">
               <div class="card  d-flex justify-content-center align-items-center" style="">
