--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,20 @@
             </nav>
 
         <div class="heading text-center py-5">
-            <h1 class="mt-3">Contact us</h1>
+            <h1 class="mt-3" style="
+            font-family: Rufina;
+            font-size: 60px;
+            font-weight: 700;
+            line-height: 72px;
+            letter-spacing: 0em;
+            text-align: center;
+            ">Contact us</h1>
             <p>We're always here to answer your questions.<br> Reach out and we'll get back to you as soon as possible.</p>
         </div>
         <section>
-            <div class="container g-3 d-flex flex-column flex-md-row py-5">
+            <div class="container  d-flex flex-column flex-md-row py-5">
                 <div class="contact-leftside col-md-6 text-center">
-                    <img src="" alt="">
+                    <img src="./accessories/Rectangle 133.png " alt="" width="90%">
                 </div>
                 <div class="contact-rightside col-md-6 ps-md-5 py-3">
                     <div class="pt-5">
