--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
                       </li>
                       <li class="nav-item fs-6">
-                        <a class="nav-link" href="#">ABOUT US</a>
+                        <a class="nav-link" href="about.html">ABOUT US</a>
                       </li><li class="nav-item fs-6">
                         <a class="nav-link" href="contact.html">CONTACT US</a>
                       </li>
@@ -85,9 +85,9 @@
       <section>
         <div class="swiper container">
    
-          <div class="swiper-wrapper  container ">
+          <div class="swiper-wrapper">
   
-            <div class="swiper-slide  ">
+            <div class="swiper-slide">
               <div class="card  d-flex justify-content-center align-items-center" style="">
                 <div class="  fefe">
                   <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
@@ -122,7 +122,7 @@
               </div>
               
               <div class="swiper-slide  ">
-                <div class="card  d-flex justify-content-center align-items-center" style="">
+                <div class="card  d-flex justify-content-center align-items-center" >
                   <div class="  fefe">
                     <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                     <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="swiper-slide  ">
-                  <div class="card  d-flex justify-content-center align-items-center" style="">
+                  <div class="card  d-flex justify-content-center align-items-center" >
                     <div class="  fefe">
                       <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                       <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
@@ -189,7 +189,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide ">
-                    <div class="card  d-flex justify-content-center align-items-center" style="">
+                    <div class="card  d-flex justify-content-center align-items-center" >
                       <div class="  fefe">
                         <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                         <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
@@ -222,7 +222,7 @@
                       </div>
                     </div>
                     <div class="swiper-slide  ">
-                      <div class="card  d-flex justify-content-center align-items-center" style="">
+                      <div class="card  d-flex justify-content-center align-items-center">
                         <div class="  fefe">
                           <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                           <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
@@ -255,7 +255,7 @@
                         </div>
                       </div>
                       <div class="swiper-slide ">
-                        <div class="card  d-flex justify-content-center align-items-center" style="">
+                        <div class="card  d-flex justify-content-center align-items-center" >
                           <div class="  fefe">
                             <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                             <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
@@ -288,7 +288,7 @@
                           </div>
                         </div>
                         <div class="swiper-slide ">
-                          <div class="card  d-flex justify-content-center align-items-center" style="">
+                          <div class="card  d-flex justify-content-center align-items-center">
                             <div class="  fefe">
                               <img src="./accessories/Reactae.png" class="" alt="..." width="100%">
                               <img src="./accessories/Frame 12.png" alt="" style="position: absolute; top: 2%; left: 2%;">
@@ -541,11 +541,11 @@
                   <p>00 000 000 00</p>
                   <p>info@luxuryrental.com</p>                    
                   <div class="icons d-flex align-items-center gap-3">
-                      <i class="bi bi-facebook"></i>
-                      <i class="bi bi-youtube"></i>
-                      <i class="bi bi-dribbble"></i>
-                      <i class="bi bi-figma"></i>
-                      <i class="bi bi-whatsapp"></i>
+                      <i class="bi fs-5 bi-facebook"></i>
+                      <i class="bi fs-5 bi-youtube"></i>
+                      <i class="bi fs-5 bi-dribbble"></i>
+                      <i class="bi fs-5 bi-figma"></i>
+                      <i class="bi fs-5 bi-whatsapp"></i>
                   </div>
                   <div class="footeraddress d-flex gap-3">
                       <p>Luxury rentals</p>
