--- a/itempage.html
+++ b/itempage.html
@@ -16,13 +16,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,400;1,500;1,600&family=Raleway:wght@400;500;600;700;800&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <style>
+        header {
+    background-color: rgba(3, 3, 3, 0.2);
+    position: absolute !important;
+    top: 0%;
+}
+.navbar-nav {
+    column-gap: 40px !important;
+}
+.navbar-nav li a {
+    font-family: Rufina;
+    /* font-size: 18px; */
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 1px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.94) !important;
+    text-decoration: none !important;
+    list-style: none !important;
+}
+    </style>
+    </style>
    
       <main class="item-main">
-        <div class="container text-center">
-
-            <div class="vill-soho d-flex justify-content-between align-items-center" >
+        <div class="container  text-center">
+            <div class="vill-soho mt-4 d-flex justify-content-between align-items-center" >
                     <h1 class=" fs-3 pt-3 text-white" >Villa SOHO</h1>
             
                 <div class="icon-ptag d-flex ">
