--- a/itempage.html
+++ b/itempage.html
@@ -18,11 +18,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,400;1,500;1,600&family=Raleway:wght@400;500;600;700;800&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <header class="container-fluid position-fixed w-100">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container"> <!-- Rework -->
+                <a class="navbar-brand text-white fs-6" href="#">LUXURY RENTALS</a>
+                <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-bars fs-4 navbar-toggle"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
+                        <li class="nav-item fs-6">
+                            <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
+                        </li>
+                        <li class="nav-item fs-6">
+                            <a class="nav-link active" aria-current="page" href="itempage.html">ITEMS</a>
+                        </li>
+                        <li class="nav-item fs-6">
+                            <a class="nav-link" href="about.html">ABOUT US</a>
+                        </li>
+                        <li class="nav-item fs-6">
+                            <a class="nav-link" href="contact.html">CONTACT US</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
+
    
       <main class="item-main">
         <div class="container text-center">
 
-            <div class="vill-soho d-flex justify-content-between align-items-center" >
+            <div class="vill-soho d-flex justify-content-between align-items-center " >
                     <h1 class=" fs-3 pt-3 text-white" >Villa SOHO</h1>
             
                 <div class="icon-ptag d-flex ">
