--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                       </li>
                       <li class="nav-item fs-6">
-                        <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
+                        <a class="nav-link active" aria-current="page" href="#">VILLA</a>
                       </li>
                       <li class="nav-item fs-6">
                         <a class="nav-link active" aria-current="page" href="itempage.html">ITEMS</a>
