--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                       </li>
                       <li class="nav-item fs-6">
-                        <a class="nav-link active" aria-current="page" href="villa.html">VILLA's</a>
+                        <a class="nav-link active" aria-current="page" href="villa.html">VILLA</a>
                       </li>
                       <li class="nav-item fs-6">
                         <a class="nav-link active" aria-current="page" href="itempage.html">ITEMS</a>
